--- a/_sass/_hero.scss
+++ b/_sass/_hero.scss
@@ -35,8 +35,8 @@
 
 @include breakpoint($tablet) {
   .mega {
-    margin-left: -100%;
-    margin-right: -100%;
+    margin-left: -7%;
+    margin-right: -7%;
     border-bottom: 1px solid $green;
     .hero {
       min-height: 401px;
